--- a/1.md
+++ b/1.md
@@ -47,30 +47,30 @@ Cup Size
 Facial Hair 
 Shoe Size 
 Birthmarks/scars 
-| Health | Fairly in good shape, eats only green food, usually works out or practice fighting with melee, sleeps good. |
-| Energy | A fair amount, athletic skills. | 
-| Memory | (How well does your character remember things, and what do they remember?) |
-| Senses | (Are any of your character's senses better or worse than others?) |
-| Allergies | (Self Explanatory. May be optional.) |
-| Handicaps | ([Ex: A limp, deafness, missing an eye] May be optional.) |
-| Medication | (What meds do your character take, if any?) |
-| Phobias | Water, Alpha, being a hero and loosing hee loved ones. | 
-| Addictions | Spring-Water (Aknerian Brewed) | 
-| Mental Disorders | AD HD and OCD 
-| Style | Tom girl, cool kind of nerd. | 
-| Mode of Dress | (Don't describe their clothes here. Describe how they wear their clothes. Two people can wear a suit, but each will wear it differently. [Ex: Is the shirt tucked in?])
-| Grooming | A little bit of both messy and we'll kept | 
-| Posture | (How does your character present themselves? Ex: Stiff, slouchy, suggestive) |
-| Gait | (The speed and style which how your character moves) |
-| Coordination | Fast reflect, responds to thinks quickly, fights fast, ext | 
-| Habits and Mannerisms | (Any nervous ticks or unconscious habits your character might have 
-| Ex: Nail biting, crosses arms, or twirls hair) | 
-| Scent | (What does your character smell like? Good or bad? How strong?) |
-| Mood | (What mood are you most likely to catch your character in?) |
-| Attitude | (How does your character interact with others?) |
-| Stability | (How emotionally consistant are they?) |
-| Expressiveness | hide emotions|
-| When Happy | Likes to make jokes, have fun with friends or go on adventures. |
+Distinguishing Features
+Health
+Energy 
+Memory
+Senses
+Allergies
+Handicaps
+Medication 
+Phobias 
+Addictions 
+Mental Disorders
+Style
+Mode of Dress
+Grooming
+Posture 
+Gait 
+Coordination
+Habits and Mannerisms 
+Scent 
+Mood 
+Attitude
+Stability 
+Expressiveness 
+When Happy 
 | When Depressed | Listens to music or puts her arm against her face. | 
 | When Angry | Kicking someone's a** or uses spells on someone who really annoying. | 
 | Current Residence | Billy's farm on Bridgeheart Isle, Erathora. | 
