--- a/1.md
+++ b/1.md
@@ -135,115 +135,109 @@ Culture
 Influences 
 Relates to 
 Traditions
-| (spilling salt, knocking on wood) |
-| Main Goal | (Driving force in the story. May be subject to change.) |
-| Minor Goals/Ambitions | (What is your character trying to accomplish?) |
-Career: (What would be your character's dream job?)
-Desires: (What does your character want?)
-Wishlist: (What material items does your character want?)
-Accomplishments: (Did they succeed in any goals?)
-Greatest Achievement: (Self Explanatory)
-Biggest Failure: (Self Explanatory)
-Secrets: (Everyone has at least one)
-Regrets: (Self Explanatory)
-Worries: (What do they worry about?)
-Best Dream:  (What would be the best thing that could possibly happen to your character?)
-Worst Nightmare: (The worst thing that could ever happen?)
-Best Memories: (A few stand out memories from the past. [keep it short and sweet])
-Worst Memories: (A few stand out memories from the past. [keep it short and sweet])
-Hobbies/Interests: (What does your character like to do for fun?)
-Skills/Talents: (Similar to hobbies, but refers to the level of skill a character has. For example, a character could like playing violin but isn't very good at it or vice versa.)
-Likes: (What does your character like?)
-Dislikes: (What can't they stand?)
-Sense of Humor: (Dark/dry/witty/sarcastic/dirty/childish/sophisticated/ironic)
-Pet Peeves: (Similar to dislikes, only more relating to human behavior than specific objects. Ex: When people tap on things or when people say "You're not fat!" when you really are)
-Superstitions/Beliefs: (Does your character believe in conspiracy theories or aliens? Do they throw salt over their shoulder or knock on wood?)
-Dreams/Nightmares: (What do they dream about? [at night])
-Quirks: (The strange little things that your character does to make them unique. Ex: Sleeps with their feet on the pillow or runs their hand along a pole as they walk beside it.)
-Savvy: (What is your character particularly well-informed of? [Ex: Politically, nature)
-Can't understand: (Something they just can't get into, such as English literate or obsession with sports)
-Closet Hobby: (Something that your character likes but isn't too obvious.)
-Guilty Pleasure: (You know...)
-Strengths: (What makes them stand a bit above the crowd? [Ex: Courageous, good listener, calm under pressure] Not supernatural abilities.)
-Flaws: (Refers to negative personality traits, not a weakness. Make sure it's a deep flaw that could actually affect your character, not something trivial like "She can't dance". [Ex: Lies constantly, socially backwards, hot-tempered])
-Perception: (How does your character generally see the world?)
-Conflicts: (What issues make your character want two things, but they can't have both?)
-Instincts: (What they are unconsciously driven to do)
-Lures: (What are they inexplicably drawn to be near? Ex: Power, money, the helpless)
-Soft Spot: (Their vulnerability, what they feel sorry for or have particularly good feelings toward)
-Cruel Streak: (What makes a character act against their usual morals, and act especially mean? (everyone has something that can do this to them))
-Powers/Abilities: (Here is where to put any superhuman powers and other abilities your character possesses. Be sure to balance them out with weaknesses, or your character loses credibility. This section may be optional depending on what genre you write.)
-Origin: (How did they get their powers?)
-Source: (How do they use their powers? [ex: shoots fire from hands, can read minds with their ring)
-Ability: (How adept are they at using said powers?
-Weaknesses: (Make it something that your character exclusively is weak to, and keep it credible. [Ex: A 4-headed radioactive dinosaur is not a credible weakness.])
-Immunities: ([Ex: cannot be burned] Be very careful with this one.)
-Restrictions: (An absolute necessity for those with supernatural powers. [Ex: Can only breathe fire when angry or can only cast darkness spells twice a day])
-Alternate Forms: (Transformations, shape shifting abilities, dark side, ect.)
-Extra Anatomy: (Such as wings or a third eye)
+Superstitions
+Main Goal
+Minor Goals/Ambitions
+Career
+Desires 
+Wishlist 
+Accomplishments 
+Greatest Achievement 
+Biggest Failure 
+Secrets
+Regrets 
+Worries 
+Best Dream 
+Worst Nightmare
+Best Memories 
+Worst Memories
+Hobbies/Interests
+Skills/Talents 
+Likes
+Dislikes 
+Sense of Humor
+Pet Peeves  
+Superstitions/Beliefs
+Dreams/Nightmares
+Quirks
+Savvy 
+Can't understand
+Guilty Pleasure
+Strengths
+Flaws
+Perception
+Conflicts
+Instincts
+Lures
+Soft Spot
+Cruel Streak
+Powers/Abilities
+Origin 
+Source 
+Ability 
+Weaknesses 
+Immunities
+Restrictions
+Alternate Forms
+Extra Anatomy
+Favorite Colors 
+Favorite Animals 
+Favorite Mythological Creatures 
+Favorite Places
+Favorite Landmarks 
+Favorite Flavors
+Favorite Drinks 
+Favorite Characters
+Favorite Genre 
+Favorite Books 
+Favorite Movies
+Favorite Games 
+Favorite Shows
+Favorite Music
+Favorite Bands
+Favorite Songs
+Favorite Sports
+Favorite Stores
+Favorite Subjects
+Favorite Numbers
+Favorite Websites
+Favorite Words
+Favorite Quotations
+Least Favorite Colors
+Least Favorite Animals
+Least Favorite Mythological Creatures
+Least Favorite Places
+Favorite Landmarks
+Least Favorite Flavors
+Least Favorite Foods
+Least Favorite Drinks
+Least Favorite Characters
+Least Favorite Genre
+Least Favorite Books
+Least Favorite Movies  
+Least Favorite Games
+Least Favorite Shows
+Least Favorite Music
+Least Favorite Bands
+Least Favorite Songs
+Least Favorite Sports
+Least Favorite Stores
+Least Favorite Subjects
+Least Favorite Numbers
+Least Favorite Websites
+Least Favorite Words
+Least Favorite Quotations 
+Languages
+Accent
+Voice
+Speech Impediments
+Greetings and Farewells
+State of Mind
+Compliment
+Insult
+Expletive
+Laughter
 
-|||
-|---|---|
-| Favorite Colors | blue, cyan, light blue, emerald, forest green |
-| Favorite Animals | foxes, kangaroos, corgis, german shepards, horses, ducks, --- | 
-| Favorite Mythological Creatures | griffins, dragons, hippogriffs, centaurs, elves, dwarves, gods and godesses, sirens |
-| Favorite Places | New York City, San Francisco, Canada, Britain, Scotland, Ireland, Germany, Italy, Egypt and Japan |
-| Favorite Landmarks | Hamburg Rathaus, Golden Gate Bridge, Empire State Building, Parlament | 
-| Favorite Flavors | Vanilla, chocolete, peanut butter |
-| Favorite Drinks | XXX |
-| Favorite Characters | on hold |
-| Favorite Genre | Fantasy, science fiction, historic fiction |
-| Favorite Books | XXX |
-| Favorite Movies | XXX |
-| Favorite Games | The Elder Scrolls, BioShock, Dishonered, Assassin's creed, Far Cry, Mafia, | 
-Favorite Shows:
-Favorite Music:
-Favorite Bands:
-Favorite Songs:
-Favorite Sports:
-Favorite Stores:
-Favorite Subjects:
-Favorite Numbers:
-Favorite Websites: 
-Favorite Words:
-Favorite Quotations: (Can be lengthy and philosophical or just simple clichés such as "Every dog has his day)
-Least Favorite Colors:
-Least Favorite Animals:
-Least Favorite Mythological Creatures:
-Least Favorite Places: 
-Favorite Landmarks: 
-Least Favorite Flavors:
-Least Favorite Foods:
-Least Favorite Drinks:
-Least Favorite Characters:
-Least Favorite Genre:
-Least Favorite Books:
-Least Favorite Movies:  
-Least Favorite Games:
-Least Favorite Shows:
-Least Favorite Music:
-Least Favorite Bands:
-Least Favorite Songs:
-Least Favorite Sports:
-Least Favorite Stores:
-Least Favorite Subjects:
-Least Favorite Numbers:
-Least Favorite Websites:
-Least Favorite Words:
-Least Favorite Quotations: (Can be lengthy and philosophical or just simple clichés such as "Every dog has his day)
-Languages: (What languages does your character speak and how fluently?)
-Accent: (Self explanatory)
-Voice: (High pitched, low pitched)
-Speech Impediments: (Stutters, slurs, or whistles)
-Greetings and Farewells: (How does your character say hello and goodbye?)
-State of Mind: (Ask your character "how are you" and see how they respond)
-Compliment: (Have your character say something nice)
-Insult: (Have your character insult someone)
-Expletive: (Can be an actual cuss (Ex: Dammit) or some kind of substitute. (Ex: Darn it!)
-Laughter: (What does your character's laugh sound like?)
-
-|||
-| ---|---|
 | Tag Line | Sup fam! |
 (Something your character says a lot in everyday sentences. Can often be filled with a sound or vocalization. Ex: Lol, dude, uh)
 Signature Quote: (Something significant your character says. Doesn't have to be meaningful, just make it memorable.)
