--- a/1.md
+++ b/1.md
@@ -237,40 +237,38 @@ Compliment
 Insult
 Expletive
 Laughter
-
-| Tag Line | Sup fam! |
-(Something your character says a lot in everyday sentences. Can often be filled with a sound or vocalization. Ex: Lol, dude, uh)
-Signature Quote: (Something significant your character says. Doesn't have to be meaningful, just make it memorable.)
-Reputation: (What does the general population think of your character?)
-First Impressions: (What would you first think of this character upon meeting them?)
-Stranger Impressions: (If someone was told about the character but didn't know them, what would they think?)
-Friendly Impressions: (What do people who are friends or acquaintances of your character think of them?)
-Enemy Impressions: (What do people who can't stand your character think? If you can't think of anyone who hates your character, we have a problem.)
-Familiar Impressions: (What do people very close to your character think of them? Ex: Family, lovers)
-Compliments: (What are some good things other people would say of your character? [heroic, good listener])
-Insults: (Would anyone like to call your character a whore, jerk, or stupid?)
-Self-Impression: (What does your character really think of themselves deep down?)
-MBTI Personality Type: [Ex: ENTP, ISTJ]
-Temperament: (Chloric/Sanguine/Melancholic/Phlegmatic) May also be called color types, such as yellow, red, blue, or green)
-Enneagram: (The Reformer/The Helper/The Achiever/The Individualist/The Investigator/The Loyalist/The Enthusiast/The Challenger/The Peacemaker)
-Ego/Superego/Id: (Superego is aims for perfection, society, and the idea of right and wrong. Id is unconscious desires and instincts - Which of these are they most driven by?
-The Self: (The center/core of your character)
-The Shadow: (The opposite qualities your character themselves does not believe they possess, but do subconsciously)
-The Anima/Animus: (The part of the character of the opposite gender)
-Persona/Mask: (What they present to the world, or the side they use to protect themselves)
-Role: (What purpose does your character serve? [mentor, leader])
-Fulfillment: (How well do they serve that role?)
-Significance: (Why does your character matter?)
-Alignment: (Good/Evil/Neutral/Lawful/Chaotic)
-Comparison: (Compare your character to some kind of animal, object, or anything else you can think of.)
-Symbol: (Does your character have any kind of recurring symbol that represents them? [Ex: a rose, a black cat, a sunset] Could be blatant or subtle.)
-Song: (A song you think best suits your character)
-Vice: (Pride/Greed/Gluttony/Lust/Envy/Sloth/Wrath)
-Virtue: (Patience/Diligence/Chastity/Temperance/Charity/Kindness/Humility)
-Defining Moment: (This is it. The single greatest moment of your character, when they truly become alive.)
-Tropes: (What about your character is stereotypical or cliched? [You can't say nothing. Every character has some kind of cliche in them])
-Originality: (What makes your character different from one like them?
-One Word: (Use a single adjective to sum up your character in a nutshell)
+Tag Line
+Signature Quote
+Reputation
+First Impressions
+Stranger Impressions
+Friendly Impressions
+Enemy Impressions
+Familiar Impressions
+Compliments
+Insults
+Self-Impression
+MBTI Personality Type
+Temperament
+Enneagram
+Ego/Superego/Id
+The Self
+The Shadow
+The Anima/Animus
+Persona/Mask
+Role
+Fulfillment
+Significance
+Alignment
+Comparison
+Symbol
+Song
+Vice
+Virtue
+Defining Moment
+Tropes
+Originality
+One Word
 
 
 Sent from my iPhone
