--- a/1.md
+++ b/1.md
@@ -1,274 +1,276 @@
-Verse
-Full Name
-Pronunciation 
-Nickname/Alias 
-Meaning 
-Origin 
-Title 
-Pet Name 
-ID Number 
-Signature 
-Gender 
-Gender Role 
-Orientation 
-Real Age 
-Age Appearance 
-Birthday 
-Deathday 
-Birthplace
-Astrological Sign 
-Zodiac Sign 
-Immediate Family 
-Distant Family 
-Parenting
-Upbringing 
-Infancy 
-Childhood 
-Adolescence 
-Adulthood 
-Coming of Age 
-Evolution 
-Species 
-Ethnicity 
-Blood Type 
-Preferred Hand 
-Facial Type 
-Eye Color 
-Hair Color 
-Hairstyle 
-Skin Tone 
-Complexion 
-Makeup 
-Body Type
-Build 
-Height 
-Weight 
-Cup Size
-Facial Hair 
-Shoe Size 
-Birthmarks/scars 
-Distinguishing Features
-Health
-Energy 
-Memory
-Senses
-Allergies
-Handicaps
-Medication 
-Phobias 
-Addictions 
-Mental Disorders
-Style
-Mode of Dress
-Grooming
-Posture 
-Gait 
-Coordination
-Habits and Mannerisms 
-Scent 
-Mood 
-Attitude
-Stability 
-Expressiveness 
-When Happy 
-When Depressed 
-When Angry
-Current Residence 
-Community
-Family
-Friends
-Enemies
-Bosses 
-Followers
-Heroes 
-Rivals
-Relates to
-Pets/Familiars
-Wardrobe
-Equipment
-Accessories 
-Trinkets
-Funds 
-Home 
-Neighborhood 
-Transportation 
-License Plate Number
-Collections 
-Most valuable possession
-Prized Possession 
-Lovers 
-Marital Status 
-Sex Life
-Type
-Turn-Ons
-Turn Offs
-Position 
-Plays 
-Fetishes
-Virginity
-Element 
-Occupation 
-Work Ethnic
-Rank 
-Income
-Wealth Status 
-Experience
-Organizations/Affiliations 
-IQ 
-Education
-School 
-Grade 
-Special Education
-Social Stereotype 
-Degrees
-Intelligence
-Extracurricular Activities
-Religion 
-Morals 
-Crime Record
-Motivation
-Priorities
-Philosophy
-Political Party
-Etiquette 
-Culture
-Influences 
-Relates to 
-Traditions
-Superstitions
-Main Goal
-Minor Goals/Ambitions
-Career
-Desires 
-Wishlist 
-Accomplishments 
-Greatest Achievement 
-Biggest Failure 
-Secrets
-Regrets 
-Worries 
-Best Dream 
-Worst Nightmare
-Best Memories 
-Worst Memories
-Hobbies/Interests
-Skills/Talents 
-Likes
-Dislikes 
-Sense of Humor
-Pet Peeves  
-Superstitions/Beliefs
-Dreams/Nightmares
-Quirks
-Savvy 
-Can't understand
-Guilty Pleasure
-Strengths
-Flaws
-Perception
-Conflicts
-Instincts
-Lures
-Soft Spot
-Cruel Streak
-Powers/Abilities
-Origin 
-Source 
-Ability 
-Weaknesses 
-Immunities
-Restrictions
-Alternate Forms
-Extra Anatomy
-Favorite Colors 
-Favorite Animals 
-Favorite Mythological Creatures 
-Favorite Places
-Favorite Landmarks 
-Favorite Flavors
-Favorite Drinks 
-Favorite Characters
-Favorite Genre 
-Favorite Books 
-Favorite Movies
-Favorite Games 
-Favorite Shows
-Favorite Music
-Favorite Bands
-Favorite Songs
-Favorite Sports
-Favorite Stores
-Favorite Subjects
-Favorite Numbers
-Favorite Websites
-Favorite Words
-Favorite Quotations
-Least Favorite Colors
-Least Favorite Animals
-Least Favorite Mythological Creatures
-Least Favorite Places
-Favorite Landmarks
-Least Favorite Flavors
-Least Favorite Foods
-Least Favorite Drinks
-Least Favorite Characters
-Least Favorite Genre
-Least Favorite Books
-Least Favorite Movies  
-Least Favorite Games
-Least Favorite Shows
-Least Favorite Music
-Least Favorite Bands
-Least Favorite Songs
-Least Favorite Sports
-Least Favorite Stores
-Least Favorite Subjects
-Least Favorite Numbers
-Least Favorite Websites
-Least Favorite Words
-Least Favorite Quotations 
-Languages
-Accent
-Voice
-Speech Impediments
-Greetings and Farewells
-State of Mind
-Compliment
-Insult
-Expletive
-Laughter
-Tag Line
-Signature Quote
-Reputation
-First Impressions
-Stranger Impressions
-Friendly Impressions
-Enemy Impressions
-Familiar Impressions
-Compliments
-Insults
-Self-Impression
-MBTI Personality Type
-Temperament
-Enneagram
-Ego/Superego/Id
-The Self
-The Shadow
-The Anima/Animus
-Persona/Mask
-Role
-Fulfillment
-Significance
-Alignment
-Comparison
-Symbol
-Song
-Vice
-Virtue
-Defining Moment
-Tropes
-Originality
-One Word
+|||
+|---|---|
+Verse |
+Full Name |
+Pronunciation |
+Nickname/Alias |
+Meaning |
+Origin |
+Title |
+Pet Name |
+ID Number |
+Signature |
+Gender |
+Gender Role |
+Orientation |
+Real Age |
+Age Appearance |
+Birthday |
+Deathday |
+Birthplace |
+Astrological Sign |
+Zodiac Sign |
+Immediate Family |
+Distant Family |
+Parenting |
+Upbringing |
+Infancy |
+Childhood |
+Adolescence |
+Adulthood | 
+Coming of Age |
+Evolution |
+Species |
+Ethnicity |
+Blood Type |
+Preferred Hand |
+Facial Type |
+Eye Color |
+Hair Color |
+Hairstyle |
+Skin Tone |
+Complexion |
+Makeup |
+Body Type |
+Build |
+Height |
+Weight |
+Cup Size |
+Facial Hair | 
+Shoe Size |
+Birthmarks/scars |
+Distinguishing Features |
+Health |
+Energy |
+Memory |
+Senses |
+Allergies |
+Handicaps | 
+Medication |
+Phobias |
+Addictions |
+Mental Disorders |
+Style |
+Mode of Dress |
+Grooming |
+Posture |
+Gait |
+Coordination |
+Habits and Mannerisms |
+Scent |
+Mood |
+Attitude |
+Stability |
+Expressiveness |
+When Happy |
+When Depressed |
+When Angry |
+Current Residence |
+Community |
+Family |
+Friends |
+Enemies |
+Bosses |
+Followers |
+Heroes |
+Rivals |
+Relates to |
+Pets/Familiars |
+Wardrobe |
+Equipment |
+Accessories |
+Trinkets |
+Funds |
+Home |
+Neighborhood |
+Transportation |
+License Plate Number |
+Collections |
+Most valuable possession |
+Prized Possession |
+Lovers |
+Marital Status |
+Sex Life |
+Type |
+Turn-Ons |
+Turn Offs |
+Position |
+Plays |
+Fetishes |
+Virginity |
+Element |
+Occupation |
+Work Ethnic |
+Rank |
+Income |
+Wealth Status |
+Experience |
+Organizations/Affiliations |
+IQ |
+Education |
+School |
+Grade |
+Special Education |
+Social Stereotype |
+Degrees |
+Intelligence |
+Extracurricular Activities |
+Religion |
+Morals |
+Crime Record |
+Motivation |
+Priorities |
+Philosophy |
+Political Party |
+Etiquette |
+Culture |
+Influences |
+Relates to |
+Traditions |
+Superstitions |
+Main Goal |
+Minor Goals/Ambitions |
+Career |
+Desires |
+Wishlist |
+Accomplishments |
+Greatest Achievement |
+Biggest Failure |
+Secrets |
+Regrets |
+Worries |
+Best Dream |
+Worst Nightmare |
+Best Memories |
+Worst Memories |
+Hobbies/Interests |
+Skills/Talents |
+Likes |
+Dislikes |
+Sense of Humor |
+Pet Peeves |
+Superstitions/Beliefs |
+Dreams/Nightmares |
+Quirks |
+Savvy |
+Can't understand |
+Guilty Pleasure |
+Strengths |
+Flaws |
+Perception |
+Conflicts |
+Instincts |
+Lures |
+Soft Spot |
+Cruel Streak |
+Powers/Abilities |
+Origin |
+Source |
+Ability |
+Weaknesses |
+Immunities |
+Restrictions |
+Alternate Forms |
+Extra Anatomy |
+Favorite Colors |
+Favorite Animals |
+Favorite Mythological Creatures |
+Favorite Places |
+Favorite Landmarks |
+Favorite Flavors |
+Favorite Drinks |
+Favorite Characters |
+Favorite Genre |
+Favorite Books |
+Favorite Movies |
+Favorite Games |
+Favorite Shows |
+Favorite Music |
+Favorite Bands |
+Favorite Songs |
+Favorite Sports |
+Favorite Stores |
+Favorite Subjects |
+Favorite Numbers |
+Favorite Websites |
+Favorite Words |
+Favorite Quotations |
+Least Favorite Colors |
+Least Favorite Animals |
+Least Favorite Mythological Creatures |
+Least Favorite Places |
+Favorite Landmarks |
+Least Favorite Flavors |
+Least Favorite Foods |
+Least Favorite Drinks |
+Least Favorite Characters |
+Least Favorite Genre |
+Least Favorite Books |
+Least Favorite Movies | 
+Least Favorite Games |
+Least Favorite Shows |
+Least Favorite Music |
+Least Favorite Bands |
+Least Favorite Songs |
+Least Favorite Sports |
+Least Favorite Stores |
+Least Favorite Subjects |
+Least Favorite Numbers |
+Least Favorite Websites |
+Least Favorite Words |
+Least Favorite Quotations |
+Languages |
+Accent | 
+Voice |
+Speech Impediments |
+Greetings and Farewells |
+State of Mind |
+Compliment |
+Insult |
+Expletive |
+Laughter |
+Tag Line |
+Signature Quote |
+Reputation |
+First Impressions |
+Stranger Impressions |
+Friendly Impressions |
+Enemy Impressions |
+Familiar Impressions |
+Compliments |
+Insults |
+Self-Impression |
+MBTI Personality Type |
+Temperament |
+Enneagram |
+Ego/Superego/Id |
+The Self |
+The Shadow |
+The Anima/Animus |
+Persona/Mask |
+Role |
+Fulfillment |
+Significance |
+Alignment | 
+Comparison |
+Symbol |
+Song |
+Vice |
+Virtue |
+Defining Moment |
+Tropes |
+Originality |
+One Word |
 
 
 Sent from my iPhone
