--- a/1.md
+++ b/1.md
@@ -10,7 +10,7 @@ Title |
 Pet Name |
 ID Number |
 Signature |
-Gender |
+Gender | Male | Female | Male 
 Gender Role |
 Orientation |
 Real Age |
@@ -35,8 +35,8 @@ Ethnicity |
 Blood Type |
 Preferred Hand |
 Facial Type |
-Eye Color |
-Hair Color |
+Eye Color | Green | Sky blue | Brown
+Hair Color | Natural light brown | Natural light blonde | Natural Dark brown
 Hairstyle |
 Skin Tone |
 Complexion |
