--- a/1.md
+++ b/1.md
@@ -36,7 +36,7 @@ Blood Type |
 Preferred Hand |
 Facial Type |
 Eye Color | Green | Sky blue | Brown
-Hair Color | Natural light brown | Natural light blonde | Natural Dark brown
+Hair Color | Natural light brown | Natural medium blonde | Natural Dark brown
 Hairstyle |
 Skin Tone |
 Complexion |
@@ -108,8 +108,8 @@ Position |
 Plays |
 Fetishes |
 Virginity |
-Element |
-Occupation |
+Element | Wind | Earth | Ice
+Occupation | 
 Work Ethnic |
 Rank |
 Income |
