--- a/1.md
+++ b/1.md
@@ -32,7 +32,7 @@ Coming of Age |
 Evolution |
 Species |
 Ethnicity |
-Blood Type | --- | O | --- |
+Blood Type | Blood Type O: Active, Curious, Friendly | --- | --- |
 Preferred Hand |
 Facial Type |
 Eye Color | Green | Sky blue | Brown
