--- a/tki-101.md
+++ b/tki-101.md
@@ -1,3 +1,3 @@
-|Dragorah|Erathora|Kentotia|Oceania|Saintaints|Titanrus|Voldelere|
-|---|---|
+||Dragorah|Erathora|Kentotia|Oceania|Saintaints|Titanrus|Voldelere|
+|---|---|---|---|---|---|---|---|
 | Animal | Dragon | Griffin | --- | Lamia | Steed | --- | --- |
