--- a/tki-101.md
+++ b/tki-101.md
@@ -1,3 +1,7 @@
 ||Dragorah|Erathora|Kentotia|Oceania|Saintaints|Titanrus|Voldelere|
 |---|---|---|---|---|---|---|---|
-| Animal | Dragon | Griffin | --- | Lamia | Steed | --- | --- |
+Flag |
+Motto | 
+Anthem |
+Animal | Dragon | Griffin | --- | Lamia | Steed | --- | --- |
+
