--- a/tki-101.md
+++ b/tki-101.md
@@ -1,7 +1,8 @@
-||Dragorah|Erathora|Kentotia|Oceania|Saintaints|Titanrus|Voldelere|
-|---|---|---|---|---|---|---|---|
+||Dragorah|Erathora|Kentotia|Lygertha|Oceania|Saintaints|Titanrus|Voldelere|
+|---|---|---|---|---|---|---|---|---|
 Flag |
 Motto | 
 Anthem |
-Animal | Dragon | Griffin | --- | Lamia | Steed | --- | --- |
+Animal | Dragon | Griffin | --- | Alicorn | Lamia | Steed | --- | --- |
+Inhabitants | Eden | Dahne Nerlok<br/>Cora | Nick | Laura | Rii<br/>Sonya | Ira<br/>Korrin | Tutrok<br/>Sacamus | Anthren<br/>Julian Terran 
 
