--- a/tki-101.md
+++ b/tki-101.md
@@ -4,5 +4,5 @@ Flag |
 Motto | 
 Anthem |
 Animal | Dragon | Griffin | --- | Alicorn | Lamia | Steed | --- | --- |
-Inhabitants | Eden | Dahne Nerlok<br/>Cora | Nick | Laura | Rii<br/>Sonya | Ira<br/>Korrin | Tutrok<br/>Sacamus | Anthren<br/>Julian Terran 
+Inhabitants | • Eden | • Dahne Nerlok<br/• Cora | • Nick | • Laura | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Julian Terran 
 
