--- a/tki-101.md
+++ b/tki-101.md
@@ -4,5 +4,6 @@ Flag |
 Motto | 
 Anthem |
 Animal | Dragon | Griffin | --- | Alicorn | Lamia | Steed | --- | --- |
+Leader(s) | Eden: *Emperor* | Dahne Nerlok: *prime minister and rhyme minister* | --- | --- | --- | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Julian Terran | 
 Inhabitants | • Eden | • Dahne Nerlok<br/>• Sierra | • Nick | • Laura | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Julian Terran 
 
