--- a/tki-101.md
+++ b/tki-101.md
@@ -5,5 +5,6 @@ Motto |
 Anthem |
 Animal | Dragon | Griffin | --- | Alicorn | Lamia | Steed | --- | --- |
 Leader(s) | Eden: *Emperor* | Dahne Nerlok: *prime minister and rhyme minister* | --- | --- | --- | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Julian Terran | 
+Race | Dragon-wyvern hybrids | Erathorans | Reptilians | Alicorns | Cyborgs | --- |
 Inhabitants | • Eden | • Dahne Nerlok<br/>• Sierra | • Nick | • Laura | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Julian Terran 
 
