--- a/tki-101.md
+++ b/tki-101.md
@@ -4,7 +4,7 @@ Flag |
 Motto | 
 Anthem |
 Animal | Dragon | Griffin | --- | Alicorn | Lamia | Steed | --- | --- |
-Leader(s) | Eden: *Emperor* | Dahne Nerlok: *prime minister and rhyme minister* | --- | --- | --- | --- | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Julian Terran | 
+Leader(s) | Eden: *Emperor* | Dahne Nerlok: *prime minister and rhyme minister* | --- | --- | --- | Ira (temporarily) | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Julian Terran | 
 Race | Dragon-wyvern hybrids | Erathorans | Reptilians | Alicorns | Cyborgs | --- |
-Inhabitants | • Eden | • Dahne Nerlok<br/>• Sierra | • Nick | • Laura | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Julian Terran 
+Inhabitants | • Eden | • Dahne Nerlok<br/>• Sierra | • Nick | • Laura | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Melcon: *President* 
 
