--- a/tki-101.md
+++ b/tki-101.md
@@ -1,4 +1,4 @@
-||Dragorah|Erathora|Kentotia|Lygertha|Oceania|Saintaints|Titanrus|Voldelere|
+|---|Dragorah|Erathora|Kentotia|Lygertha|Oceania|Saintaints|Titanrus|Voldelere|
 |---|---|---|---|---|---|---|---|---|
 Flag |
 Motto | 
@@ -7,4 +7,5 @@ Animal | Dragon | Griffin | --- | Alicorn | Lamia | Steed | --- | --- |
 Leader(s) | Eden: *Emperor* | Dahne Nerlok: *prime minister and rhyme minister* | --- | --- | --- | Ira (temporarily) | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Julian Terran | 
 Race | Dragon-wyvern hybrids | Erathorans | Reptilians | Alicorns | Cyborgs | --- |
 Inhabitants | • Eden | • Dahne Nerlok<br/>• Sierra | • Nick | • Laura | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Melcon: *President* 
+Capital | Kalcif | Bridkhart | --- | --- | Steelpoint | Opulis | Basile | --- 
 
