--- a/tki-101.md
+++ b/tki-101.md
@@ -1,4 +1,4 @@
-|---|Dragorah|Erathora|Kentotia|Lygertha|Nibeia|Oceania|Saintaints|Titanrus|Voldelere|
+|---|Dragorah|Erathora|Kentotia|Lygertha|Niberia|Oceania|Saintaints|Titanrus|Voldelere|
 |---|---|---|---|---|---|---|---|---|---|
 Flag |
 Motto | 
