--- a/tki-101.md
+++ b/tki-101.md
@@ -1,11 +1,11 @@
-|---|Dragorah|Erathora|Kentotia|Lygertha|Niberia|Oceania|Saintaints|Titanrus|Voldelere|
-|---|---|---|---|---|---|---|---|---|---|
-Flag |
+ ---|Biladeeris|Dragorah|Erathora|Kentotia|Oceania|Saintaints|Titanrus|Voldelere|
+|---|---|---|---|---|---|---|---|
+Flag | 
 Motto | 
 Anthem |
-Animal | Dragon | Griffin | --- | Alicorn | --- | Lamia | Steed | --- | --- | --- | 
-Leader(s) | Eden: *Emperor* | Dahne Nerlok: *prime minister and rhyme minister* | --- | --- | --- | --- | Ira (temporarily) | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Julian Terran | 
-Race | Dragon-wyvern hybrids | Erathorans | Reptilians | Alicorns | Animal-like hybrids | --- | Talkins<br/>Lumerians | Cyborgs | --- |
-Inhabitants | • Eden | • Dahne Nerlok<br/>• Sierra | • Nick | • Laura |  • Mhya<br/>• Carl<br/>• Robby<br/>• Naro | • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Melcon: *President* 
-Capital | Kalcif | Bridkhart | --- | --- | --- | Steelpoint | Opulis | Basile | --- 
+Animal | Alicorn | Dragon | Griffin | --- | Lamia | Steed | --- | --- | 
+Leader(s) | --- | Eden: *Emperor* | Alan Gate: *prime minister* | --- | --- | Ira | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Malealcon<br/>Julian Terran | 
+Race | Lygerthans | Dragon-wyvern hybrids | Erathorans | Reptilians | Human-Fauna | Talkins<br/>Lumerians | Cyborgs | --- |
+Inhabitants  | • Aurora | • Eden | • Alan Gate<br/>Mhya<br/>Carl<br/>Tutrok<br/>Stelleha<br/>Ellis | • Nick |  • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Maleacon<br/>Tarren
+Capital | --- | Kalcif | Bridgeheart | --- | Steelpoint | Opulis | Basile | --- 
 
