--- a/tki-101.md
+++ b/tki-101.md
@@ -7,5 +7,5 @@ Animal | Alicorn | Dragon | Griffin | --- | Lamia | Steed | --- | --- |
 Leader(s) | --- | Eden: *Emperor* | Alan Gate: *prime minister* | --- | --- | Ira | Tedious III: *previous emperor*<br/>Sacamus: *Emperor* | Malealcon<br/>Julian Terran | 
 Race | Lygerthans | Dragon-wyvern hybrids | Erathorans | Reptilians | Human-Fauna | Talkins<br/>Lumerians | Cyborgs | --- |
 Inhabitants  | • Aurora | • Eden | • Alan Gate<br/>Mhya<br/>Carl<br/>Tutrok<br/>Stelleha<br/>Ellis | • Nick |  • Rii<br/>• Sonya | • Ira<br/>• Korrin | • Tutrok<br/> •Sacamus | • Anthren<br/>• Maleacon<br/>Tarren
-Capital | --- | Kalcif | Bridgeheart | --- | Steelpoint | Opulis | Basile | --- 
+Capital | --- | Kalcif | Bridgeheart | --- | Steelpoint | Opulis | --- | --- 
 
